Inventory page mobile overlap solved

--- a/src/components/InventoryItem/InventoryItem.scss
+++ b/src/components/InventoryItem/InventoryItem.scss
@@ -22,11 +22,11 @@
     }
     &:hover {
       background: rgba(46, 102, 230, 0.07);
+
     }
     &__label {
       display: flex;
       justify-content: flex-start;
-      
       color: $slate;
       width: 41%;
       @include mobile-labels;
@@ -122,21 +122,28 @@
     &__warehouse-name {
       width: 35%;
       @include tablet {
-        width: 18%
+        width: 19%
       }
     }
     &__delete {
-      margin-top: 3rem;
+      margin-top: 1.5rem;
+      border: none;
+      background-color: $white;
       @include tablet {
         display: none;
         margin-right: 1.25rem;
       }
+      
       &-tablet {
+        display: none;
         @include tablet {
           display: initial;
+          border: none;
+          background-color: $white;
         }
       }
       &-button{
+        display: none;
         @include mobile{
           position: relative;
           top: 3.25rem;
@@ -155,18 +162,20 @@
         }
       
       }
-    }
-    &__edit-link {
-      @include mobile{
-        position: relative;
-        top: 1.25rem;
-        left: 26vw;
       }
-      @include tablet {
-        margin-top: .5rem;
-        position: unset;
-      }
-    }
+      &__edit {
+        &-link {
+          @include mobile{
+            position: relative;
+            top: 11rem;
+      
+          }
+        @include tablet {
+          margin-left: .05rem;
+          position: unset;
+        }
+        }
     
-  }
+        }
+      }
 }
